[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes_and_Scripts/GameCore/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes_and_Scripts/Bases/GenericBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes_and_Scripts/Environment/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes_and_Scripts/Environment/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes_and_Scripts/Environment/SpawnPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes_and_Scripts/Environment/ExitPortal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes_and_Scripts/Player/PlayerGhost.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes_and_Scripts/Interface/Overlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes_and_Scripts/GameCore/ScreenEdge.tscn" type="PackedScene" id=9]

[node name="GameScene" type="Node"]

script = ExtResource( 1 )

[node name="Button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_top = 95.0
margin_right = 194.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "open menu"
flat = false
align = 1

[node name="Button2" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 247.0
margin_top = 96.0
margin_right = 368.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "lose game"
flat = false
align = 1

[node name="GenericBase" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 589.372, 316.543 )

[node name="Block" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 1070, 170 )

[node name="Wall" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 940, 190 )

[node name="SpawnPlatform" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 200, 290 )

[node name="ExitPortal" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 200, 450 )

[node name="PlayerGhost" parent="." index="7" instance=ExtResource( 7 )]

position = Vector2( 410, 290 )

[node name="Overlay" parent="." index="8" instance=ExtResource( 8 )]

[node name="ScreenEdge" parent="." index="9" instance=ExtResource( 9 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]


